c4prj1_deck/grade.txt
Grading at Tue Dec 24 09:04:27 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:73:3: error: expected ‘,’ or ‘;’ before ‘for’
   for (int i = 0; i < 13; i++) {
   ^
deck.c:73:19: error: ‘i’ undeclared (first use in this function)
   for (int i = 0; i < 13; i++) {
                   ^
deck.c:73:19: note: each undeclared identifier is reported only once for each function it appears in
deck.c:73:30: error: expected ‘;’ before ‘)’ token
   for (int i = 0; i < 13; i++) {
                              ^
deck.c:73:30: error: expected statement before ‘)’ token
Compilation of deck.c failed

Overall Grade: F
